Misc cleanup and migrate to jspecify