@@ -51,8 +51,8 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.ConsoleCommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.util.Vector;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 
 import static net.kyori.adventure.platform.bukkit.BukkitComponentSerializer.legacy;
 import static net.kyori.adventure.platform.bukkit.MinecraftReflection.findClass;
@@ -73,7 +73,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public @NotNull String createMessage(final @NotNull V viewer, final @NotNull Component message) {
+    public @NonNull String createMessage(final @NonNull V viewer, final @NonNull Component message) {
       return legacy().serialize(message);
     }
   }
@@ -84,12 +84,12 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void sendMessage(final @NotNull CommandSender viewer, final @NotNull String message) {
+    public void sendMessage(final @NonNull CommandSender viewer, final @NonNull String message) {
       viewer.sendMessage(message);
     }
 
     @Override
-    public void sendMessage(final @NotNull CommandSender viewer, final @NotNull String message, final ChatType.@NotNull Bound boundChatType) {
+    public void sendMessage(final @NonNull CommandSender viewer, final @NonNull String message, final ChatType.@NonNull Bound boundChatType) {
       viewer.sendMessage(message);
     }
   }
@@ -100,12 +100,12 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public @NotNull Vector createPosition(final @NotNull Player viewer) {
+    public @NonNull Vector createPosition(final @NonNull Player viewer) {
       return viewer.getLocation().toVector();
     }
 
     @Override
-    public @NotNull Vector createPosition(final double x, final double y, final double z) {
+    public @NonNull Vector createPosition(final double x, final double y, final double z) {
       return new Vector(x, y, z);
     }
   }
@@ -116,7 +116,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     private static final MethodHandle STOP_ALL_SUPPORTED = findMethod(Player.class, "stopAllSounds", void.class);
 
     @Override
-    public void playSound(final @NotNull Player viewer, final net.kyori.adventure.sound.@NotNull Sound sound, final @NotNull Vector vector) {
+    public void playSound(final @NonNull Player viewer, final net.kyori.adventure.sound.@NonNull Sound sound, final @NonNull Vector vector) {
       final String name = name(sound.name());
       final Location location = vector.toLocation(viewer.getWorld());
 
@@ -124,7 +124,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void stopSound(final @NotNull Player viewer, final @NotNull SoundStop stop) {
+    public void stopSound(final @NonNull Player viewer, final @NonNull SoundStop stop) {
       if (STOP_SUPPORTED) {
         final String name = name(stop.sound());
         if (name.isEmpty() && STOP_ALL_SUPPORTED != null) {
@@ -139,7 +139,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
       }
     }
 
-    protected static @NotNull String name(final @Nullable Key name) {
+    protected static @NonNull String name(final @Nullable Key name) {
       if (name == null) {
         return "";
       }
@@ -160,7 +160,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void playSound(final @NotNull Player viewer, final net.kyori.adventure.sound.@NotNull Sound sound, final @NotNull Vector vector) {
+    public void playSound(final @NonNull Player viewer, final net.kyori.adventure.sound.@NonNull Sound sound, final @NonNull Vector vector) {
       final SoundCategory category = this.category(sound.source());
       if (category == null) {
         super.playSound(viewer, sound, vector);
@@ -171,7 +171,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void stopSound(final @NotNull Player viewer, final @NotNull SoundStop stop) {
+    public void stopSound(final @NonNull Player viewer, final @NonNull SoundStop stop) {
       final SoundCategory category = this.category(stop.source());
       if (category == null) {
         super.stopSound(viewer, stop);
@@ -224,7 +224,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public net.kyori.adventure.platform.bukkit.BukkitFacet.@NotNull BossBar createBossBar(final @NotNull Collection<Player> viewers) {
+    public net.kyori.adventure.platform.bukkit.BukkitFacet.@NonNull BossBar createBossBar(final @NonNull Collection<Player> viewers) {
       return new net.kyori.adventure.platform.bukkit.BukkitFacet.BossBar(viewers);
     }
   }
@@ -232,7 +232,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
   static class BossBar extends Message<Player> implements Facet.BossBar<Player> {
     protected final org.bukkit.boss.BossBar bar;
 
-    protected BossBar(final @NotNull Collection<Player> viewers) {
+    protected BossBar(final @NonNull Collection<Player> viewers) {
       super(Player.class);
       this.bar = Bukkit.createBossBar("", BarColor.PINK, BarStyle.SOLID);
       this.bar.setVisible(false);
@@ -242,32 +242,32 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void bossBarInitialized(final net.kyori.adventure.bossbar.@NotNull BossBar bar) {
+    public void bossBarInitialized(final net.kyori.adventure.bossbar.@NonNull BossBar bar) {
       Facet.BossBar.super.bossBarInitialized(bar);
       this.bar.setVisible(true);
     }
 
     @Override
-    public void bossBarNameChanged(final net.kyori.adventure.bossbar.@NotNull BossBar bar, final @NotNull Component oldName, final @NotNull Component newName) {
+    public void bossBarNameChanged(final net.kyori.adventure.bossbar.@NonNull BossBar bar, final @NonNull Component oldName, final @NonNull Component newName) {
       if (!this.bar.getPlayers().isEmpty()) {
-        this.bar.setTitle(this.createMessage(this.bar.getPlayers().get(0), newName));
+        this.bar.setTitle(this.createMessage(this.bar.getPlayers().getFirst(), newName));
       }
     }
 
     @Override
-    public void bossBarProgressChanged(final net.kyori.adventure.bossbar.@NotNull BossBar bar, final float oldPercent, final float newPercent) {
+    public void bossBarProgressChanged(final net.kyori.adventure.bossbar.@NonNull BossBar bar, final float oldPercent, final float newPercent) {
       this.bar.setProgress(newPercent);
     }
 
     @Override
-    public void bossBarColorChanged(final net.kyori.adventure.bossbar.@NotNull BossBar bar, final net.kyori.adventure.bossbar.BossBar.@NotNull Color oldColor, final net.kyori.adventure.bossbar.BossBar.@NotNull Color newColor) {
+    public void bossBarColorChanged(final net.kyori.adventure.bossbar.@NonNull BossBar bar, final net.kyori.adventure.bossbar.BossBar.@NonNull Color oldColor, final net.kyori.adventure.bossbar.BossBar.@NonNull Color newColor) {
       final BarColor color = this.color(newColor);
       if (color != null) {
         this.bar.setColor(color);
       }
     }
 
-    private @Nullable BarColor color(final net.kyori.adventure.bossbar.BossBar.@NotNull Color color) {
+    private @Nullable BarColor color(final net.kyori.adventure.bossbar.BossBar.@NonNull Color color) {
       if (color == net.kyori.adventure.bossbar.BossBar.Color.PINK) {
         return BarColor.PINK;
       } else if (color == net.kyori.adventure.bossbar.BossBar.Color.BLUE) {
@@ -288,14 +288,14 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void bossBarOverlayChanged(final net.kyori.adventure.bossbar.@NotNull BossBar bar, final net.kyori.adventure.bossbar.BossBar.@NotNull Overlay oldOverlay, final net.kyori.adventure.bossbar.BossBar.@NotNull Overlay newOverlay) {
+    public void bossBarOverlayChanged(final net.kyori.adventure.bossbar.@NonNull BossBar bar, final net.kyori.adventure.bossbar.BossBar.@NonNull Overlay oldOverlay, final net.kyori.adventure.bossbar.BossBar.@NonNull Overlay newOverlay) {
       final BarStyle style = this.style(newOverlay);
       if (style != null) {
         this.bar.setStyle(style);
       }
     }
 
-    private @Nullable BarStyle style(final net.kyori.adventure.bossbar.BossBar.@NotNull Overlay overlay) {
+    private @Nullable BarStyle style(final net.kyori.adventure.bossbar.BossBar.@NonNull Overlay overlay) {
       if (overlay == net.kyori.adventure.bossbar.BossBar.Overlay.PROGRESS) {
         return BarStyle.SOLID;
       } else if (overlay == net.kyori.adventure.bossbar.BossBar.Overlay.NOTCHED_6) {
@@ -312,7 +312,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void bossBarFlagsChanged(final net.kyori.adventure.bossbar.@NotNull BossBar bar, final @NotNull Set<net.kyori.adventure.bossbar.BossBar.Flag> flagsAdded, final @NotNull Set<net.kyori.adventure.bossbar.BossBar.Flag> flagsRemoved) {
+    public void bossBarFlagsChanged(final net.kyori.adventure.bossbar.@NonNull BossBar bar, final @NonNull Set<net.kyori.adventure.bossbar.BossBar.Flag> flagsAdded, final @NonNull Set<net.kyori.adventure.bossbar.BossBar.Flag> flagsRemoved) {
       for (final net.kyori.adventure.bossbar.BossBar.Flag removeFlag : flagsRemoved) {
         final BarFlag flag = this.flag(removeFlag);
         if (flag != null) {
@@ -327,7 +327,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
       }
     }
 
-    private @Nullable BarFlag flag(final net.kyori.adventure.bossbar.BossBar.@NotNull Flag flag) {
+    private @Nullable BarFlag flag(final net.kyori.adventure.bossbar.BossBar.@NonNull Flag flag) {
       if (flag == net.kyori.adventure.bossbar.BossBar.Flag.DARKEN_SCREEN) {
         return BarFlag.DARKEN_SKY;
       } else if (flag == net.kyori.adventure.bossbar.BossBar.Flag.PLAY_BOSS_MUSIC) {
@@ -340,12 +340,12 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
     }
 
     @Override
-    public void addViewer(final @NotNull Player viewer) {
+    public void addViewer(final @NonNull Player viewer) {
       this.bar.addPlayer(viewer);
     }
 
     @Override
-    public void removeViewer(final @NotNull Player viewer) {
+    public void removeViewer(final @NonNull Player viewer) {
       this.bar.removePlayer(viewer);
     }
 
@@ -362,7 +362,7 @@ class BukkitFacet<V extends CommandSender> extends FacetBase<V> {
 
   static final class ViaHook implements Function<Player, UserConnection> {
     @Override
-    public UserConnection apply(final @NotNull Player player) {
+    public UserConnection apply(final @NonNull Player player) {
       return Via.getManager().getConnectionManager().getConnectedClient(player.getUniqueId());
     }
   }
